--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: user, local: true, html: {class: 'form-horizontal'}) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -11,27 +11,37 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :user_name %>
+  <div class="form-group">
+    <%= form.label :name, 'Nombre', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-6">
+      <%= form.text_field :name, id: :user_name, required: true, class: 'form-control', placeholder: 'Nombre' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email, id: :user_email %>
+  <div class="form-group">
+    <%= form.label :email, 'Correo electrónico', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-6">
+      <%= form.email_field :email, id: :user_email, required: true, class: 'form-control', placeholder: 'Correo electrónico' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :telephone %>
-    <%= form.number_field :telephone, id: :user_telephone %>
+  <div class="form-group">
+    <%= form.label :cellphone, 'Teléfono celular', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-6">
+      <%= form.telephone_field :cellphone, id: :user_cellphone, required: true, class: 'form-control', placeholder: 'Teléfono celular' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :cellphone %>
-    <%= form.number_field :cellphone, id: :user_cellphone %>
+  <div class="form-group">
+    <%= form.label :telephone, 'Teléfono fijo', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-6">
+      <%= form.telephone_field :telephone, id: :user_telephone, required: true, class: 'form-control', placeholder: 'Teléfono fijo' %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-6">
+      <%= form.submit 'Registrar', class: 'btn btn-default' %>
+    </div>
   </div>
 <% end %>
