--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing User</h1>
+<div class="container-fluid">
+  <div class="jumbotron">
+    <h1>Actualizar registro de cliente</h1>
 
-<%= render 'form', user: @user %>
+    <%= link_to 'Ver', @user, class: 'btn btn-default' %>
+    <%= link_to 'Volver atrás', users_path, class: 'btn btn-default' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+    <%= render 'form', user: @user %>
+  </div>
+</div>
