--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New User</h1>
+<div class="container-fluid">
+  <div class="jumbotron">
+    <h1>Registro cliente</h1>
 
-<%= render 'form', user: @user %>
+    <%= link_to 'Volver atrás', users_path, class: 'btn btn-default' %>
 
-<%= link_to 'Back', users_path %>
+    <%= render 'form', user: @user %>
+  </div>
+</div>
