--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="container-fluid">
+  <div class="jumbotron">
+    <div class="container text-center">
+      <h1>BIENVENIDOS A SPORT SOCCER</h1>
+
+      <%= link_to 'Registrar clientes', users_path, class: 'btn btn-default btn-lg' %>
+      <%= link_to 'Registrar canchas', soccerfields_path, class: 'btn btn-default btn-lg' %>
+      <br><br>
+      
+      <%= render 'slider'%>
+    </div>
+  </div>
+</div>
