--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>Sport Soccer</title>
     <%= csrf_meta_tags %>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <%= javascript_include_tag :application, 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag :application, media: 'all', 'data-turbolinks-track': 'reload' %>  
 
