UPDATE: Index welcome

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,12 @@
 <div class="container-fluid">
+  <%= render 'slider'%>
   <div class="jumbotron">
-    <div class="container text-center">
-      <h1>BIENVENIDOS A SPORT SOCCER</h1>
-
-      <%= link_to 'Registrar clientes', users_path, class: 'btn btn-default btn-lg' %>
-      <%= link_to 'Registrar canchas', soccerfields_path, class: 'btn btn-default btn-lg' %>
-      <br><br>
-      
-      <%= render 'slider'%>
-    </div>
-  </div>
+    <h1 style="color: #1b3b6d; text-align: center">BIENVENIDOS A CLUB SPORT SOCCER</h1>
+    <p style="text-align: center">    
+    Nos dedicamos al arriendo de canchas de fútbol, futbolito y multicanchas.
+    <br><br>
+    Excelente infraestructura y espacios deportivos.
+    </p>
+  </div>  
+  <br><br>
 </div>
