--- a/app/views/welcome/_slider.html.erb
+++ b/app/views/welcome/_slider.html.erb
@@ -1,11 +1,11 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id="slider" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <% @indicators.each do |indicator| %>
+    <% @images.each do |indicator, file| %>
       <% if indicator == 0 %>
-        <li data-target="#myCarousel" data-slide-to=<%= indicator %> class="active"></li>
+        <li data-target="#slider" data-slide-to=<%= indicator %> class="active"></li>
       <% else %>
-        <li data-target="#myCarousel" data-slide-to=<%= indicator %>></li>
+        <li data-target="#slider" data-slide-to=<%= indicator %>></li>
       <% end %>
     <% end %>
   </ol>
@@ -15,22 +15,30 @@
     <% @images.each do |index, image| %>
       <% if index == 0 %>
         <div class="item active item-active">
-          <%= link_to image_tag(image, :style=>"width: 100%;", :alt => "slide-active"), welcome_index_path, :class => "img-responsive" %>
+          <%= link_to image_tag(image, width: '100%', alt: 'slide-active'), welcome_index_path, class: 'img-responsive' %>
+          <div class="carousel-caption d-none d-md-block">
+            <h1>En Club Sport Soccer ofrecemos arriendo de canchas.</h1>
+            <h2>¡Ven a visitarnos!</h2>
+          </div>  
         </div>
       <% else %>
         <div class="item">
-          <%= link_to image_tag(image, :style=>"width: 100%;", :alt => "slide"), welcome_index_path, :class => "img-responsive" %>
+          <%= link_to image_tag(image, width: '100%', alt: 'slide'), welcome_index_path, class: 'img-responsive' %>
+          <div class="carousel-caption">
+            <h1>En Club Sport Soccer ofrecemos arriendo de canchas.</h1>
+            <h2>¡Ven a visitarnos!</h2>
+          </div>  
         </div>
       <% end %>
     <% end %>
   </div>
 
   <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+  <a class="left carousel-control" href="#slider" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+  <a class="right carousel-control" href="#slider" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right"></span>
     <span class="sr-only">Next</span>
   </a>
