--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_with(model: user, local: true, html: {class: 'form-horizontal'}) do |form| %>
   <% if user.errors.any? %>
+    <br>
     <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(user.errors.count, "Error,") %> Prohibido guardar este usuario:</h2>
 
       <ul>
       <% user.errors.full_messages.each do |message| %>
