--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <div class="container-fluid">
   <div class="jumbotron">
-    <p id="notice"><%= notice %></p>
+    <p id="notice">
+      <strong><%= notice %></strong>
+    </p>
 
     <h1>Clientes</h1>
 
