--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
   <% if user.errors.any? %>
     <br>
     <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "Error,") %> Prohibido guardar este usuario:</h2>
+      <h2><%= pluralize(user.errors.count, "Error,") %> Prohibido registrar este usuario:</h2>
 
       <ul>
       <% user.errors.full_messages.each do |message| %>
