--- a/app/views/soccerfields/show.html.erb
+++ b/app/views/soccerfields/show.html.erb
@@ -17,7 +17,7 @@
 
     <p>
       <strong>Estado:</strong>
-      <%= @soccerfield.state %>
+      <%= @soccerfield.state.titleize %>
     </p>
 
     <p>
